--- a/android/app/src/main/res/layout/fragment_group_add_information.xml
+++ b/android/app/src/main/res/layout/fragment_group_add_information.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="vm"
             type="com.woowacourse.friendogly.presentation.ui.group.add.GroupAddViewModel" />
@@ -11,17 +12,18 @@
 
     <LinearLayout
         android:id="@+id/ll_group_add_information"
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context=".presentation.ui.group.add.information.GroupAddInformationFragment">
+
         <TextView
             style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size25"
-            android:layout_marginTop="80dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:text="@string/group_add_information_main_title"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="80dp"
+            android:text="@string/group_add_information_main_title"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Space
             android:layout_width="wrap_content"
@@ -44,6 +46,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/group_add_information_main_content" />
         </LinearLayout>
+
         <Space
             android:layout_width="wrap_content"
             android:layout_height="30dp" />
@@ -59,16 +62,27 @@
             android:layout_height="10dp" />
 
         <EditText
+            android:id="@+id/et_group_subject"
             style="@style/Theme.AppCompat.TextView.Medium.Black.Size16"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/rect_gray03_fill_16"
-            android:maxLength="50"
-            android:maxLines="1"
-            android:id="@+id/et_group_subject"
             android:hint="@string/group_add_group_subject_hint"
+            android:maxLength="100"
+            android:maxLines="2"
             android:paddingHorizontal="16dp"
-            android:paddingVertical="14dp"/>
+            android:paddingVertical="14dp"
+            android:text="@={vm.groupTitle}" />
+
+        <TextView
+            style="@style/Theme.AppCompat.TextView.Regular.Black.Size12"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
+            android:gravity="end"
+            app:titleCount="@{vm.groupTitle}"
+            tools:text="0/100" />
 
         <Space
             android:layout_width="wrap_content"
@@ -90,13 +104,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:hint="@string/group_add_content_hint"
             android:background="@drawable/rect_gray03_fill_16"
             android:gravity="top"
+            android:hint="@string/group_add_content_hint"
             android:lines="5"
             android:maxLength="1000"
             android:maxLines="1"
             android:paddingHorizontal="16dp"
-            android:paddingVertical="14dp" />
+            android:paddingVertical="14dp"
+            android:text="@={vm.groupContent}" />
+
+        <TextView
+            style="@style/Theme.AppCompat.TextView.Regular.Black.Size12"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
+            android:gravity="end"
+            app:contentCount="@{vm.groupContent}"
+            tools:text="0/1000" />
     </LinearLayout>
 </layout>
