--- a/android/app/src/main/res/layout/include_add_dog_menu.xml
+++ b/android/app/src/main/res/layout/include_add_dog_menu.xml
@@ -9,15 +9,13 @@
         <variable
             name="menu"
             type="java.lang.String" />
-        <variable
-            name="selectState"
-            type="java.lang.Boolean" />
     </data>
 
     <CheckBox
+        android:id="@+id/checkbox_group_filter"
         android:onCheckedChanged="@{(buttonView, isChecked) -> actionHandler.selectGroupFilter(menu, isChecked)}"
         style="@style/group_add_custom_checkbox"
-        android:checked="@{selectState}"
+        android:checked="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:minHeight="0dp"
