--- a/android/app/src/main/res/layout/fragment_group_add_detail.xml
+++ b/android/app/src/main/res/layout/fragment_group_add_detail.xml
@@ -75,6 +75,7 @@
             android:layout_height="20dp" />
 
         <TextView
+            style="@style/Theme.AppCompat.TextView.Medium.Black.Size16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
