feat: 뒤로가기 기능 구현

--- a/android/app/src/main/res/layout/activity_chat.xml
+++ b/android/app/src/main/res/layout/activity_chat.xml
@@ -19,6 +19,7 @@
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:layout_width="match_parent"
+                android:id="@+id/toolbar_chat"
                 android:layout_height="wrap_content"
                 app:navigationIcon="@drawable/ic_arrow_left"
                 app:navigationIconTint="@color/black"
