--- a/android/app/src/main/res/layout/include_group_filter.xml
+++ b/android/app/src/main/res/layout/include_group_filter.xml
@@ -9,15 +9,15 @@
     </data>
 
     <LinearLayout
-        android:background="@drawable/rect_white_line_black_100"
+        android:background="@drawable/rect_orange100_fill_12"
         android:paddingHorizontal="12dp"
         android:paddingVertical="8dp"
-        android:layout_marginHorizontal="4dp"
         android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <TextView
+            style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size14"
             android:text="@{filterName}"
             tools:text="참여 가능"
             android:layout_width="wrap_content"
