--- a/android/app/src/main/res/layout/include_group_selector.xml
+++ b/android/app/src/main/res/layout/include_group_selector.xml
@@ -19,6 +19,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         android:orientation="horizontal"
         android:paddingHorizontal="12dp">
 
@@ -36,6 +37,7 @@
             layout="@layout/include_group_filter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="5dp"
             app:filterName="@{groupFilterSelector.SIZE_FILTER_SUBJECT}"
             app:layout_constraintStart_toEndOf="@id/include_group_list_participation_filter"
             app:layout_constraintTop_toTopOf="parent" />
@@ -45,6 +47,7 @@
             layout="@layout/include_group_filter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="5dp"
             app:filterName="@{groupFilterSelector.GENDER_FILTER_SUBJECT}"
             app:layout_constraintStart_toEndOf="@id/include_group_list_size_filter"
             app:layout_constraintTop_toTopOf="parent" />
@@ -53,7 +56,7 @@
             android:id="@+id/rcv_group_list_group"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/include_group_list_participation_filter"
