--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -144,6 +144,20 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="Theme.AppCompat.TextView.SemiBold.Orange.Size14" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/orange05</item>
+        <item name="android:textSize">14dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/noto_sans_kr_semi_bold</item>
+    </style>
+
+    <style name="Theme.AppCompat.TextView.SemiBold.Black.Size14" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">14dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/noto_sans_kr_semi_bold</item>
+    </style>
+
     <!-- Medium -->
     <style name="Theme.AppCompat.TextView.Medium.Black.Size18" parent="@style/Widget.AppCompat.TextView">
         <item name="android:textColor">@color/black</item>
