--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -293,6 +293,19 @@
         <item name="fontFamily">@font/noto_sans_kr_regular</item>
     </style>
 
+    <style name="Theme.AppCompat.TextView.Regular.White.Size12" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">12dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/noto_sans_kr_regular</item>
+    </style>
+
+    <style name="Theme.AppCompat.TextView.Regular.Size12" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textSize">12dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/noto_sans_kr_regular</item>
+    </style>
+
     <style name="Theme.AppCompat.TextView.Regular.Gray07.Size10" parent="@style/Widget.AppCompat.TextView">
         <item name="android:textColor">@color/gray07</item>
         <item name="android:textSize">10dp</item>
