fix: 글자 크기에 맞춰 뷰가 변하도록 수정

--- a/android/app/src/main/res/layout/item_chat_mine.xml
+++ b/android/app/src/main/res/layout/item_chat_mine.xml
@@ -4,19 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="10dp">
+    android:layout_marginVertical="10dp"
+    android:gravity="end">
 
     <TextView
         android:id="@+id/tv_chat_mine_time"
         style="@style/Theme.AppCompat.TextView.Regular.Gray07.Size10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0"
-        android:minWidth="100dp"
-        android:gravity="end"
         android:layout_gravity="bottom"
-        android:layout_marginBottom="2dp"
         android:layout_marginEnd="5dp"
+        android:layout_marginBottom="2dp"
+        android:layout_weight="0"
+        android:gravity="end"
+        android:minWidth="120dp"
         app:layout_constraintBottom_toBottomOf="@id/tv_chat_mine_message"
         app:layout_constraintEnd_toStartOf="@id/tv_chat_mine_message"
         tools:text="오후 2:23" />
@@ -28,12 +29,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="21dp"
+        android:layout_weight="0"
         android:background="@drawable/rect_orange700_fill_16"
         android:paddingHorizontal="16dp"
         android:paddingVertical="11dp"
         android:textColor="@color/white"
-        android:layout_weight="1"
-        tools:text="채드야 도토리 사진 좀 많이 올려봐봐 레퍼런스 부족하다" />
+        tools:text="이거 맞음?" />
 
 
 </LinearLayout>
