--- a/android/app/src/main/res/layout/include_add_dog_menu.xml
+++ b/android/app/src/main/res/layout/include_add_dog_menu.xml
@@ -7,18 +7,18 @@
             name="actionHandler"
             type="com.woowacourse.friendogly.presentation.ui.group.add.GroupAddActionHandler" />
         <variable
-            name="menu"
+            name="filterName"
             type="java.lang.String" />
     </data>
 
     <CheckBox
         android:id="@+id/checkbox_group_filter"
-        android:onCheckedChanged="@{(buttonView, isChecked) -> actionHandler.selectGroupFilter(menu, isChecked)}"
+        android:onCheckedChanged="@{(buttonView, isChecked) -> actionHandler.selectGroupFilter(filterName, isChecked)}"
         style="@style/group_add_custom_checkbox"
         android:checked="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:minHeight="0dp"
-        android:text="@{menu}"
+        android:text="@{filterName}"
         tools:text="대형견" />
 </layout>
