--- a/android/app/src/main/res/layout/activity_group_add.xml
+++ b/android/app/src/main/res/layout/activity_group_add.xml
@@ -78,7 +78,7 @@
             android:background="@drawable/rect_orange100_fill_12"
             android:gravity="center"
             android:padding="16dp"
-            android:text="이전"
+            android:text="@string/group_list_prev_btn"
             style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/tv_group_add_next_button"
@@ -95,7 +95,7 @@
             android:background="@drawable/rect_orange100_fill_12"
             android:gravity="center"
             android:padding="16dp"
-            android:text="다음"
+            android:text="@string/group_list_next_btn"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_weight="1"
