--- a/android/app/src/main/res/layout/item_group.xml
+++ b/android/app/src/main/res/layout/item_group.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -158,7 +158,6 @@
                 tools:text="벼리 · 잠실6동 " />
 
             <TextView
-                app:groupDateTime="@{group.groupDate}"
                 android:id="@+id/tv_group_list_group_date"
                 style="@style/Theme.AppCompat.TextView.Regular.Gray07.Size12"
                 android:layout_width="wrap_content"
